# amc

./: .cz-config.js  .env  .eslintrc.json  .lintstagedrc.json  UPDATE_LOG.md  commitlint.config.js  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
cers/: myapp.key  myapp.key.pub
public/: wx.html
scripts/: updatelog.mjs  updater.mjs
src/: App.vue  arco.css  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  commands.rs  feat.rs  main.rs
src-tauri/src/config/: amc.rs  config.rs  draft.rs  mod.rs  qucent.rs
src-tauri/src/core/: core.rs  handle.rs  hotkey.rs  logger.rs  mod.rs  sysopt.rs  tray.rs
src-tauri/src/utils/: dirs.rs  help.rs  init.rs  resolve.rs  server.rs
src/api/: index.ts
src/api/helper/: checkStatus.ts
src/api/interface/: app.ts  data.ts  debt.ts  enterprise.ts  home.ts  index.ts  library.ts  login.ts  package.ts  role.ts  user.ts
src/api/modules/: app.ts  data.ts  debt.ts  enterprise.ts  home.ts  index.ts  library.ts  login.ts  package.ts  role.ts  user.ts
src/assets/css/: login.css  splashscreen.css
src/components/ErrorMessage/: 403.vue  404.vue  500.vue  index.less
src/components/aside/: index.vue
src/components/header/: index.vue  operates.vue
src/config/: config.ts  serviceLoading.ts
src/hooks/: useAmc.ts  useDark.ts  useImage.ts
src/layout/: base.vue  index.ts  login.vue
src/pages/: layout.vue  layoutBase.vue  login.vue  main.vue  menuLayout.vue  wx.vue
src/plugin/: icon.ts  index.ts  style.ts
src/router/: cacheRouter.ts  constant.ts  index.ts  router.ts  utils.ts
src/services/: cmd.ts  types.ts
src/store/: index.ts  interface.ts
src/utils/: auth.ts  index.ts  piniaPersist.ts  storage.ts  upload.ts
src/windows/: actions.ts  index.ts  type.ts
~/.tauri/: omb.key  omb.key.pub
(+203 files in other folders)
